--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "css-loader": "^6.7.1",
     "esbuild-loader": "^2.18.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "process": "^0.11.10",
+    "react-hot-loader": "^4.13.0",
+    "react-refresh": "0.11.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
@@ -21,6 +24,6 @@
   },
   "scripts": {
     "dev": "webpack serve",
-    "build": "webpack --mode production"
+    "build": "NODE_ENV=production webpack --mode production"
   }
 }
