--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack serve",
+    "build": "cross-env NODE_ENV=production webpack --mode production"
+  },
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -10,10 +14,13 @@
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "esbuild-loader": "^2.18.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "process": "^0.11.10",
     "react-hot-loader": "^4.13.0",
     "react-refresh": "0.11.0",
@@ -21,9 +28,5 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
-  },
-  "scripts": {
-    "dev": "webpack serve",
-    "build": "NODE_ENV=production webpack --mode production"
   }
 }
